methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:13: error: not found: value brushUP
    brushUP();
    ^PictureMono1:18: error: not found: value brushUP
    brushUP();
    ^