methods.picture.PictureMono1.scala.code
var x=0
override def run() {
  for(x<-0 to 3){
    forward();
    forward();
    brushDown();
    brushUp();
    left();
    forward();
    right();
    forward();
    brushDown();
    brushUP();
    forward();
    right();
    forward();
    brushDown();
    brushUP();
    left();
    forward();
    forward();
    left();
    
  }
}